--- a/templates/meals.html
+++ b/templates/meals.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meals Manager</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    <h2>I'm extending the base template</h2>
+    
     {% for meal in meals %}
         {{ meal.meal_name }}<br>
         {{ meal.category_name }}<br>
         {{ meal.meal_description }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
