--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,36 @@
 </head>
 <body>
 
+    <header>
+        <!-- Top Navbar -->
+        <nav class="nav-extended text-shadow #f44336 red">
+            <div class="nav-wrapper">
+              <a href="{{ url_for('get_meals') }}" class="brand-logo">MyFit</a>
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('get_meals') }}">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Browse Categories</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Register</a></li>
+              </ul>
+            </div>
+          </nav>
+        
+        <!-- Mobile Navbar --> 
+
+          <ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align light-blue-text text-darken-4">MyFit</h4></li>
+            <li><a href="{{ url_for('get_meals') }}">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Browse Categories</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Register</a></li>
+          </ul>
+    </header>
+
     {% block content %}
     {% endblock %}
 
