--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Browse Categories</a></li>
                 <li><a href="#">Log Out</a></li>
-                <li><a href="#">Log In</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Sign Up</a></li>
               </ul>
             </div>
           </nav>
@@ -39,8 +39,8 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">Browse Categories</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="{{ url_for('register') }}">Register</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('register') }}">Sign Up</a></li>
           </ul>
     </header>
 
