--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
                     <li><a href="{{ url_for('get_meals') }}">Home</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('add_meals') }}">New Meal</a></li>
                     <li><a href="#">Browse Categories</a></li>
-                    <li><a href="#">Add Meal</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -42,8 +42,8 @@
                     <li><a href="{{ url_for('get_meals') }}">Home</a></li>
             {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('add_meals') }}">New Meal</a></li>
                     <li><a href="#">Browse Categories</a></li>
-                    <li><a href="#">Add Meal</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
