--- a/templates/base.html
+++ b/templates/base.html
@@ -15,42 +15,45 @@
 <body>
 
     <header>
-        <!-- Top Navbar -->
-        <nav class="nav-extended text-shadow #f44336 red">
-            <div class="nav-wrapper">
-              <a href="{{ url_for('get_meals') }}" class="brand-logo">MyFit</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-              <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_meals') }}">Home</a></li>
-                {% if session.user %}
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('add_meals') }}">New Meal</a></li>
-                    <li><a href="#">Browse Categories</a></li>
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('register') }}">Sign Up</a></li>
-                {% endif %}
-              </ul>
-            </div>
-          </nav>
-        
-        <!-- Mobile Navbar --> 
-
-          <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align light-blue-text text-darken-4">MyFit</h4></li>
-                    <li><a href="{{ url_for('get_meals') }}">Home</a></li>
+        <!-- top navbar -->
+		<nav class="nav-extended text-shadow light-blue darken-1">
+			<div class="nav-wrapper">
+				<a href="{{ url_for('get_recipes') }}" class="brand-logo">Task Manager</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="{{ url_for('get_recipes') }}">Home</a></li>
             {% if session.user %}
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('add_meals') }}">New Meal</a></li>
-                    <li><a href="#">Browse Categories</a></li>
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('register') }}">Sign Up</a></li>
-                {% endif %}
-          </ul>
-    </header>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('add_recipe') }}">New Task</a></li>
+            {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            {% endif %}
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+				</ul>
+			</div>
+		</nav>
+
+        <!-- mobile sidenav -->
+		<ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align light-blue-text text-darken 4">Task Manager</h4></li>
+            <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('add_recipe') }}">New Task</a></li>
+            {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+            {% endif %}
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+		</ul>
+	</header>
 
     <section>
         <!-- flash messages -->
@@ -70,11 +73,11 @@
         {% endblock %}
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %}
     {% endblock %}
-
 </body>
 </html>
