--- a/templates/login.html
+++ b/templates/login.html
@@ -37,8 +37,8 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Not a member?
-                <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Sign Up</a>
+                New Here?
+                <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register Account</a>
             </p>
         </div>
     </div>
