--- a/templates/login.html
+++ b/templates/login.html
@@ -1,46 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Log In</h3>
-
+    <!-- form utilising materialise css -->
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
-            <div class="card-panel">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-user-cog prefix light-blue-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- passowrd -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- login -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Log In <i class="fas fa-sign-in-alt"></i>
-                    </button>
+        <form class="col s12 m10 offset-m1 l8 offset-l2 grey lighten-4" method="POST" action="{{ url_for('login') }}">
+            <h2>Log In</h2>
+
+            <!-- username input field -->
+            <div class="row form-row">
+                <div class="input-field col s12">
+                  <input placeholder="Enter your username" name="username" id="username" type="text" class="validate">
+                  <label for="username"><i class="fas fa-user form-icon"></i>Username</label>
                 </div>
             </div>
-        </form>
-    </div>
 
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                New Here?
-                <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register Account</a>
-            </p>
-        </div>
+            <!-- password input field -->
+            <div class="row form-row">
+                <div class="input-field col s12">
+                  <input placeholder="Enter your password" name="password" id="password" type="password" class="validate">
+                  <label for="password"><i class="fas fa-lock form-icon"></i>Password</label>
+                </div>
+            </div>
+
+            <!-- log in button -->
+            <div class="center-align">
+                <button class="btn waves-effect waves-light red darken-4 center-align button-send" type="submit">Log In
+                  <i class="fas fa-sign-in-alt"></i>
+                </button>
+            </div>
+            
+            <!-- link to register page -->
+            <div class="row col s12">
+              <p class="black-text">Not yet registered?<a class="register-links" href="{{ url_for('register') }}"> Create an account here!</a></p>
+            </div>
+        </form>
     </div>
 
 {% endblock %}
