--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,51 +1,52 @@
-
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Add Recipe</h3>
+<div class="row">
+    <form class="col s12 m10 offset-m1 grey lighten-4" method="POST" action="{{ url_for('add_recipe') }}">
+        <h2 class="header">Add Recipe</h2>
 
-    <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
-            <!-- category selection -->
-			<div class="row">
-				<div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-					<select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
-                        {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endfor %}
-                    </select>
-					<label for="category_name">Recipe Category</label>
-				</div>
-			</div>
-            <!-- task name -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="recipe_name" name="recipe_name" minlength="5" maxlength="50"
-                        type="text" class="validate" required>
-                    <label for="recipe_name">Recipe Name</label>
-                </div>
+        <div class="row form-row">
+            <!-- select category field -->
+            <div class="input-field col s12">
+                <select id="category_name" name="category_name" class="validate" required>
+                    <option value="" disabled selected>Choose category</option>
+                    {% for category in categories %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="category_name">Select a Category</label>
             </div>
-            <!-- task description -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                    <textarea id="recipe_description" name="recipe_description" minlength="5"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
-                    <label for="recipe_description">Recipe Description</label>
-                </div>
+
+            <!-- input recipe name -->
+            <div class="input-field col s12">
+                <input id="recipe_name" name="recipe_name" minlength="2" maxlength="40" type="text" class="validate" required>
+                <label for="recipe_name">Recipe</label>
             </div>
+
+            <!-- input recipe description -->  
+            <div id="description-col" class="input-field col s12">
+                <input id="recipe_description" name="author_name" minlength="2" maxlength="30" type="text" class="validate">
+                <label for="recipe_description">Description</label>
+            </div>
+
+            <!-- input image url as an option for the user - not required -->    
+            <div class="input-field col s12">
+                <input id="image_url" name="image_url" minlength="2" maxlength="150" type="url" class="validate">
+                <label for="image_url">Link to image (optional)</label>
+            </div>
+        </div>
+
             <!-- submit button -->
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                        Add Recipe <i class="fas fa-plus-square right"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
+        <div class="center-align">
+            <button class="btn waves-effect waves-light red darken-4 center-align" type="submit">Submit
+            <i class="fas fa-sign-in-alt"></i>
+            </button>
+            <a href="{{ url_for('profile', username=session['user']) }}" class="btn waves-effect waves-light grey darken-4 center-align">Cancel
+                <i class="fas fa-times-circle"></i>
+            </a>
+        </div>
+        
+    </form>
+</div>
 
 {% endblock %}
