--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,15 +1,94 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row">
-        <div class="col s12 m8 offset-m2">
-            <div class="card-panel">
-                <h3 class="center-align light-blue-text text-darken-4">
-                    {{ username }}'s Profile
-                </h3>
-            </div>
-        </div>
+
+  <div class="row">
+    <div class="col s12 m8 offset-m2">
+      <h2>{{ username }}'s Profile</h2>
     </div>
+  </div>
+  
+  <!-- if user logged in has previously created recipes the following will display -->
+    {% if recipes|length > 0 %}
+      <div class="row">
+        <div class="col s12 m8 offset-m2">
+          <h2 class="header profile-header">My Recipes</h2>
+          <div class="row center-align">
+            <a href="{{ url_for('add_recipe') }}" class="btn-large waves-effect waves-light red darken-4 center-align">Add New Recipe
+              <i class="fas fa-plus  add-icon"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+          {% for recipe in recipes if session.user|lower == recipe.added_by|lower %}
+          <div class="col s12 m6 l4">
+            <div class="card hoverable"> 
+              <div class="card-image">
+                {% if recipe.image_url %}
+                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.title_name }} image">
+                {% else %}
+                      <img class="activator category-image" src="../static/images/new-zombie.jpg" alt="zombie image"> 
+                {% endif %}
+              </div>
+          
+              <div class="card-content">
+                  <span class="category-heading card-title activator">{{ recipe.category_name }}<i class="fas fa-arrow-circle-up right"></i></span>
+                  <span class="recipe-heading">Recipe:</span><span class="recipe-content">{{ recipe.title_name }}</span> <br>
+                  {% if recipe.recipe_name %}
+                    <span class="recipe-heading">Description:</span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
+                  {% endif %}
+              </div>
+
+              <div class="card-reveal">
+                <br><span class="recipe-heading"><em>Created by:</em></span><span class="recipe-content">{{ recipe.created_by }}</span>
+              </div>    
+            </div> 
+        
+            <!-- Edit & Delete buttons  -->
+            <div class="center-align">
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small waves-effect waves-light grey darken-4 center-align">Edit
+                  <i class="fas fa-pen"></i>
+                </a>
+
+                <!-- Modal Trigger -->
+                <a href="#{{ recipe._id }}" class="btn-small waves-effect waves-light red darken-4 center-align modal-trigger">Delete
+                  <i class="fas fa-trash-alt"></i>
+                </a>
+                <!-- Modal Structure -->
+                <div id="{{ recipe._id }}" class="modal">
+                  <div class="modal-content">
+                    <h4>Delete this Recipe?</h4>
+                    <p>Are you sure you want to delete this recipe? This cannot be undone!</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="{{ url_for('profile', username=session['user']) }}" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="modal-close btn-small waves-effect waves-light red darken-4 center-align ">Delete
+                      <i class="fas fa-trash-alt"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+          {% endfor %}
+      </div>
+
+    <!-- if user logged in has not previously created recipes the following will display -->
+    {% else %}
+      <div class="row">
+          <div class="col s12 m8 offset-m2 grey lighten-4">
+              <h2>You have not yet added any recipes!</h2>
+          </div>
+      </div>
+      <div class="row center-align">
+        <a href="{{ url_for('add_recipe') }}" class="btn-large waves-effect waves-light red darken-4 center-align">Add New Recipe
+          <i class="fas fa-plus  add-icon"></i>
+        </a>
+      </div>
+
+    {% endif %}
+
 
 {% endblock %}
-© 2021 GitHub, Inc.
