--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,25 +1,93 @@
 {% extends "base.html" %}
 {% block content %}
 
-<ul class="collapsible">
-    {% for recipe in recipes %}
-    <li>
-        <div class="collapsible-header white-text light-blue darken-4 text-shadow">
-            <div class="col s3">
-                <i class="fas fa-caret-down"></i>
-                <a href="" class="btn-small green accent-4">Done</a>
-                <a href="" class="btn-small light-blue lighten-1">Edit</a>
-            </div>
-            <div class="col s9">
-                <strong>{{ recipe.recipe_name }}</strong>
-            </div>
-            <div class="collapsible-body">
-                <strong>{{ recipe.category_name }}</strong>
-                <p>{{ recipe.recipe_description }}</p>
-                <p><em>by: {{ recipe.created_by }}</em></p>
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
+  <div class="col s12 m7">
+   
+       <!-- search all recipes -->
+      <div class="row">
+        <form class="col s12" method="POST" action="{{ url_for('search') }}">
+            <div class="row valign-wrapper center-align search-row">
+                <div class="col s12 input-field">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" minlength="1" class="validate" required>
+                    <label for="query">Search all recipes</label>
+                </div>
+              </div>
+                <div class="row valign-wrapper center-align">
+                  <div class="col s12">
+                    <button class="btn waves-effect waves-light red darken-4 center-align search-button" type="submit" >
+                      <i class="fas fa-search"></i> Search
+                    </button>
+                    <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light grey darken-4 center-align search-button">
+                      <i class="reset-icon fas fa-redo"></i>Reset
+                    </a>
+                  </div>
+              </div>      
+        </form>
+      </div>
+  </div>
+      <!-- message to display if no matching results found -->
+      {% if recipes|length == 0 %}
+        <h4>No results found</h4>
+      {% endif %}
 
+
+   <!-- recipes display utilizing materialize css card reveal display -->
+
+      <div class="row">
+        <!-- retrieve info from db and fill cards to display -->
+        {% for recipe in recipes %}
+          <div class="col s12 m6 l4">
+            <div class="card hoverable"> 
+              <div class="card-image">
+                {% if recipe.image_url %}
+                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.title_name }} image">
+                {% else %}
+                      <img class="activator category-image" src="../static/images/new-zombie.jpg" alt="zombie image">
+                {% endif %}
+              </div>
+          
+              <div class="card-content">
+                <span class="category-heading card-title activator">{{ recipe.category_name }}<i class="fas fa-arrow-circle-up right"></i></span>
+                <span class="recipe-heading">Name:</span><span class="recipe-content">{{ recipe.recipe_name }}</span> <br>
+                {% if recipe.author_name %}
+                  <span class="recipe-heading">Description:</span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
+                {% endif %}
+              </div>
+
+              <div class="card-reveal">
+                <br><span class="recipe-heading"><em>Created by:</em></span><span class="recipe-content">{{ recipes.created_by }}</span>
+              </div>    
+            </div> 
+
+            <!-- Edit & Delete buttons - only show here if user == "admin"-->
+            {% if session.user|lower == "admin"|lower%}
+                <div class="center-align">
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small waves-effect waves-light grey darken-4 center-align">Edit
+                      <i class="fas fa-pen"></i>
+                    </a>
+                    <!-- Modal Trigger to confirm delete action -->
+                    <a href="#{{ recipe._id }}" class="btn-small waves-effect waves-light red darken-4 center-align modal-trigger">Delete
+                      <i class="fas fa-trash-alt"></i>
+                    </a>
+                    <!-- Modal Structure -->
+                    <div id="{{ recipe._id }}" class="modal">
+                      <div class="modal-content">
+                        <h4>Delete this Recipe?</h4>
+                        <p>Are you sure you want to delete this recipe? This cannot be undone!</p>
+                      </div>
+                      <div class="modal-footer">
+                        <a href="{{ url_for('profile', username=session['user']) }}" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="modal-close btn-small waves-effect waves-light red darken-4 center-align ">Delete
+                          <i class="fas fa-trash-alt"></i>
+                        </a>
+                      </div>
+                    </div>
+                </div>
+            {% endif %}
+
+          </div>
+        {% endfor %}
+      </div>     
+           
 {% endblock %}
