--- a/templates/register.html
+++ b/templates/register.html
@@ -1,46 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Register</h3>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
-            <div class="card-panel">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- passowrd -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- register -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
+  <div class="row">
+    <!-- form utilising materialize css -->
+    <form class="col s12 m10 offset-m1 l8 offset-l2 grey lighten-4" method="POST" action="{{ url_for('register') }}">
+        <h2>Register</h2>
 
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                Already Registered?
-                <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
-            </p>
+        <!-- username input field -->
+        <div class="row form-row">
+          <div class="input-field col s12">
+            <input placeholder="Username" name="username" id="username" type="text" 
+              minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+            <label for="username"><i class="fas fa-user form-icon"></i>Username</label>
+            <span class="label-text">(Choose a Username 5 - 15 characters long, numbers and letters only)</span>
+          </div>
         </div>
-    </div>
+
+        <!-- password input field -->
+        <div class="row form-row">
+          <div class="input-field col s12">
+            <input placeholder="Password" id="password" name="password" type="password" 
+              minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+            <label for="password"><i class="fas fa-lock form-icon"></i>Password</label>
+            <span class="label-text">(Choose a password 5 - 15 characters long, numbers and letters only)</span>
+          </div>
+        </div>
+
+        <!-- register button -->
+        <div class="center-align">
+          <button class="btn waves-effect waves-light red darken-4 center-align button-send" type="submit">Register
+            <i class="fas fa-sign-in-alt"></i>
+          </button>
+        </div>
+        
+        <!-- link to log in page if user has not yet created account -->
+        <div class="row col s12">
+          <p class="black-text">Already have an account?<a class="register-links" href="{{ url_for('login') }}"> Sign in here!</a></p>
+        </div>
+    </form>
+  </div>
 
 {% endblock %}
