--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,9 +27,9 @@
             <div class="card hoverable"> 
               <div class="card-image">
                 {% if recipe.image_url %}
-                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.title_name }} image">
+                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }} image">
                 {% else %}
-                      <img class="activator category-image" src="../static/images/new-zombie.jpg" alt="zombie image"> 
+                      <img class="activator category-image" src="../static/images/food.jpg" alt="zombie image"> 
                 {% endif %}
               </div>
           
