--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -41,22 +41,20 @@
             <div class="card hoverable"> 
               <div class="card-image">
                 {% if recipe.image_url %}
-                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.title_name }} image">
+                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.recipee_name }} image">
                 {% else %}
-                      <img class="activator category-image" src="../static/images/new-zombie.jpg" alt="zombie image">
+                      <img class="activator category-image" src="../static/images/food.jpg" alt="food image">
                 {% endif %}
               </div>
           
               <div class="card-content">
                 <span class="category-heading card-title activator">{{ recipe.category_name }}<i class="fas fa-arrow-circle-up right"></i></span>
                 <span class="recipe-heading">Name:</span><span class="recipe-content">{{ recipe.recipe_name }}</span> <br>
-                {% if recipe.author_name %}
-                  <span class="recipe-heading">Description:</span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
-                {% endif %}
               </div>
 
               <div class="card-reveal">
-                <br><span class="recipe-heading"><em>Created by:</em></span><span class="recipe-content">{{ recipes.created_by }}</span>
+                <span class="recipe-heading card-title">Description:<i class="fas fa-arrow-circle-down right"></i></span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
+                <br><span class="recipe-heading"><em>Created by:</em></span><span  class="recipe-content">{{ recipes.created_by }}</span>
               </div>    
             </div> 
 
