--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-1">
 			<div class="nav-wrapper">
-				<a href="{{ url_for('get_recipes') }}" class="brand-logo">Task Manager</a>
+				<a href="{{ url_for('get_recipes') }}" class="brand-logo">PocketPal</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_recipes') }}">Home</a></li>
