--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -41,9 +41,9 @@
             <div class="card hoverable"> 
               <div class="card-image">
                 {% if recipe.image_url %}
-                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.recipee_name }} image">
+                  <img class="activator category-image" src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }} image">
                 {% else %}
-                      <img class="activator category-image" src="../static/images/food.jpg" alt="food image">
+                      <img class="activator category-image" src="../static/images/food.png" alt="food image">
                 {% endif %}
               </div>
           
