--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -38,7 +38,7 @@
                 
                 <div class="input-field col s12">
                     <!-- if using default image, field should not display image address -->
-                    {% if recipe.image_url == "../static/images/food.jpg" %}
+                    {% if recipe.image_url == "../static/images/food.png" %}
                     <input id="image_url" name="image_url" value="" minlength="2" maxlength="150" type="url" class="validate">
                     <label for="image_url">Link to image (optional)</label>
                     {% else %}
