--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -8,7 +8,7 @@
         <form class="col s12" method="POST" action="{{ url_for('search') }}">
             <div class="row valign-wrapper center-align search-row">
                 <div class="col s12 input-field">
-                    <i class="fas fa-search prefix"></i>
+                    <i class="fas fa-search prefix search-icon"></i>
                     <input type="text" name="query" id="query" minlength="1" class="validate" required>
                     <label for="query">Search all recipes</label>
                 </div>
@@ -54,6 +54,7 @@
 
               <div class="card-reveal">
                 <span class="recipe-heading card-title">Description:<i class="fas fa-arrow-circle-down right"></i></span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
+                <span class="recipe-heading card-title">Ingredients:</span> <span class="recipe-content">{{ recipe.ingredients }}</span><br>
                 <br><span class="recipe-heading"><em>Created by:</em></span><span  class="recipe-content">{{ recipes.created_by }}</span>
               </div>    
             </div> 
