--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="row">
-          {% for recipe in recipes if session.user|lower == recipe.cretaed_by|lower %}
+          {% for recipe in recipes %}
           <div class="col s12 m6 l4">
             <div class="card hoverable"> 
               <div class="card-image">
