--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -54,8 +54,8 @@
 
               <div class="card-reveal">
                 <span class="recipe-heading card-title">Description:<i class="fas fa-arrow-circle-down right"></i></span> <span class="recipe-content">{{ recipe.recipe_description }}</span><br>
-                <span class="recipe-heading card-title">Ingredients:</span> <span class="recipe-content">{{ recipe.ingredients }}</span><br>
-                <br><span class="recipe-heading"><em>Created by:</em></span><span  class="recipe-content">{{ recipes.created_by }}</span>
+                <span class="recipe-heading card-title">Ingredients:</span> <span class="recipe-content"> {% for ingredient in recipe.ingredients %} {{ingredient}} <br>{% endfor %}</span><br>
+                <br><span class="recipe-heading"><em>Created by:</em></span><span  class="recipe-content">{{ recipe.created_by }}</span>
               </div>    
             </div> 
 
