--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -28,6 +28,12 @@
                     <label for="recipe_name">Recipe</label>
                 </div>
 
+                 <!-- input recipe description -->  
+            <div id="description-col" class="input-field col s12">
+                <input id="recipe_description" name="author_name" minlength="2" maxlength="30" value="{{ recipe.recipe_name }} type="text" class="validate">
+                <label for="recipe_description">Description</label>
+            </div>
+
                 
             <!-- input recipe ingredients -->
             <div class="row">
