--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 body {
-    background-image: url('/static/images/background.jpg');
+background-image: url('/static/images/background-1.png');
+background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+background-size: cover;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -10,7 +15,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    font-family:'Fredoka One', sans-serif;
+font-family:'Fredoka One', sans-serif;
 }
 
 html {
@@ -42,7 +47,7 @@ h1, h2, h4, p {
 
 h2, h3, h4 {
     font-family:'Fredoka One', sans-serif;;
-    text-shadow: 2px 2px 10px #DDDBCB;
+    text-shadow: 1px 1px 1px #DDDBCB;
 }
 
 
@@ -114,6 +119,14 @@ form {
     font-size: 12px;
 }
 
+input, select, textarea{
+    color: #1B9AAA;
+}
+
+textarea:focus, input:focus {
+    color: #1B9AAA;
+}
+
 /* --- buttons --- */
 .btn {
     margin-top: 50px;
@@ -131,6 +144,7 @@ form {
 }
 .reset-icon {
     padding-right: 8px;
+    color: #ffffff ;
 }
 
 .button-send {
@@ -143,6 +157,10 @@ form {
 
 .add-icon {
     padding-left: 10px;
+}
+
+.button-div {
+    padding-left: 25px
 }
 
 /* --- flash messages --- */
